--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -303,7 +303,7 @@
     </main>
 
     <footer>
-        <p>Copyright &copy; 2024 TechCon. All rights reserved. TechCon is a registered trademark of TechCon Events LLC.</p>
+        <p>copyright &copy; 2024 TechCon. All rights reserved. TechCon is a registered trademark of TechCon Events LLC.</p>
     </footer>
 </body>
 </html>
